<resources>
    <string name="app_name">Formula One Drivers</string>
    <string name="app_title">Formula One 2023 Drivers App</string>
    <string name="fetch_error">Something went wrong!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="ulangi_password">Ulangi Password</string>
    <string name="logout">Logout</string>
    <string name="capture">Capture</string>
    <string name="analyze">Analyze</string>
    <string name="barcode_result">Barcode Result</string>
    <string name="scan_barcode_now">Scan Barcode Now!</string>
    <string name="password_hint">* * * * *</string>
    <string name="login_password_form">Login password form</string>
    <string name="halo_gmail_com">halo@gmail.com</string>
    <string name="or">Or</string>
    <string name="real_time_ml_kit">Real Time ML Kit</string>
    <string name="pick_image_ml_kit">Pick Image ML Kit</string>
    <string name="crash_button">Crash Button</string>
    <string name="hi_welcome_to">Hi, ! Welcome to</string>
    <string name="error_image">Error Image</string>
    <string name="image_to_scan">Image to scan</string>
    <string name="image_placeholder">Image Placeholder</string>
    <string name="favorite">Favorite</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="driver_number">Driver Number</string>
    <string name="driver_name">Driver Name</string>
    <string name="driver_display_name">Driver Display Name</string>
    <string name="team_name">Team Name</string>
    <string name="nationality">Nationality</string>
    <string name="error_load_driver_detail">Error Load Driver Detail</string>
    <string name="rooted">Rooted</string>
    <string name="root_check">Root Check</string>
    <string name="is_emulator">Is Emulator</string>
    <string name="is_active_accessible_service">Is Active Accessible Service ?</string>
    <string name="is_use_emulator">Is use Emulator ?</string>
    <string name="is_root">Is Root ?</string>
    <string name="security_check">Security Check</string>
    <string name="is_usb_debuging">Is USB debuging ?</string>
</resources>