<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:textAlignment="center"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/black"
        android:paddingBottom="21dp"
        android:text="@string/login"
        />

    <TextView
        android:id="@+id/login_email_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/login_email_input"
        android:minHeight="48dp"
        android:hint="@string/halo_gmail_com"
        android:autofillHints="emailAddress"/>

    <TextView
        android:id="@+id/login_password_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:id="@+id/login_password_input"
        android:minHeight="48dp"
        android:autofillHints="password" />

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/or"
        />

    <Button
        android:id="@+id/to_regist_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/or"
        />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/to_ml_button"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/real_time_ml_kit"/>

    <Button
        android:id="@+id/to_pick_image_mlkit_button"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_image_ml_kit"/>

    <Button
        android:id="@+id/crash_button"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crash_button"/>

</LinearLayout>