<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="32dp"
    tools:context=".SecurityCheckActivity">

    <TextView
        android:id="@+id/isActiveAccessibleService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_active_accessible_service"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/activeAccessibilityServiceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/isEmulator"
        android:layout_width="wrap_content"
        android:paddingTop="18dp"
        android:layout_height="wrap_content"
        android:text="@string/is_use_emulator"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/emulatorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/isRoot"
        android:layout_width="wrap_content"
        android:paddingTop="18dp"
        android:layout_height="wrap_content"
        android:text="@string/is_root"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/rootText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/isUSBDebuging"
        android:layout_width="wrap_content"
        android:paddingTop="18dp"
        android:layout_height="wrap_content"
        android:text="@string/is_usb_debuging"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/USBDebugingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>