<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PickImageMLKitActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp" >

        <LinearLayout
            android:id="@+id/pick_image_mlkit_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/pick_image_mlkit_image_to_scan"
                android:visibility="gone"
                android:contentDescription="@string/image_to_scan" />

            <ImageView
                android:id="@+id/pick_image_mlkit_image_placeholder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/placeholder"
                android:contentDescription="@string/image_placeholder"/>

        </LinearLayout>

        <Button
            android:id="@+id/pick_image_mlkit_button_capture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/capture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pick_image_mlkit_linear_layout" />

        <Button
            android:id="@+id/pick_image_mlkit_button_get_barcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/analyze"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pick_image_mlkit_button_capture" />

        <TextView
            android:id="@+id/pick_image_mlkit_barcode_title_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pick_image_mlkit_button_get_barcode"
            android:text="@string/barcode_result"
            android:fontFamily="sans-serif-black"
            android:layout_marginTop="24dp"
            android:textSize="28sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/pick_image_mlkit_barcode_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pick_image_mlkit_barcode_title_result"
            android:text="@string/barcode_result"
            android:textAlignment="center"
            android:layout_marginTop="12dp"
            android:textSize="18sp"
            android:textColor="@color/black" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>